# rust-analyzer

./: Cargo.toml
crates/ra_ide_api/: Cargo.toml
crates/ra_ide_api/src/: change.rs  db.rs  lib.rs  symbol_index.rs
crates/ra_shims/: Cargo.toml
crates/ra_shims/src/: lib.rs  wasm_instant.rs
crates/wasm_demo/: Cargo.toml  README.md
crates/wasm_demo/src/: lib.rs  return_types.rs
crates/wasm_demo/www/: bootstrap.js  example-code.js  index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
website/src/wasm-demo/src/: lib.rs  return_types.rs
website/src/wasm-demo/www/: example-code.js  index.js  package-lock.json  package.json
website/website-gen/src/: main.rs
